# starship-game

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  test_CMakeLists.txt
examples/: main.cxx
include/starship/: Vector2D.hxx  asteroid.hxx  entity.hxx  game.hxx  powerup.hxx  projectile.hxx  starship.hxx
src/: game.cxx
tests/: game_test.cxx
